crates/did/src/key/snapshots/did_core__key__resolver__test__metadata.snap
---
source: crates/did-core/src/key/resolver.rs
assertion_line: 103
expression: resolved.metadata
---
{
  "contentType": "application/did+ld+json",
  "did": {
    "didString": "did:key:z6MkhaXgBZDvotDkL5257faiztiGiC2QtKLGpbnnEGta2doK",
    "method": "key",
    "methodSpecificId": "z6MkhaXgBZDvotDkL5257faiztiGiC2QtKLGpbnnEGta2doK"
  },
  "pattern": "^did:key:z[a-km-zA-HJ-NP-Z1-9]+$"
}
